--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/temporal_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/temporal_fields.html
@@ -12,7 +12,7 @@
 <div class="control-group">
 	<label class="control-label" for="field-status"> <span title="This field is required" class="control-required">*</span> {{ _("Status") }}</label>
 	<div class="controls">
-		<select id="field-status" name="status" data-module="autocomplete" title="Is data collection ongoing, completed, or planned?">
+		<select id="field-status" name="status" data-module="autocomplete" title="Is this dataset completed or is data collection ongoing or being planned?">
 			{% for status in h.get_status() %}
 			<option value="{{ status }}" {% if status == data.custom_meta.status %}selected{% endif %} > {{ status }} </option>
 			{% endfor %}
@@ -30,13 +30,13 @@
 	</div>
 	<div id="temporalDiv" class="panel-collapse collapse out">
 		<p>
-		{{ form.input('temporal', label=_('Temporal Extent'), id='field-temporal', placeholder=_('2000-01-15 00:45:00,2010-01-15 00:06:00'), value=data.custom_meta.temporal, error=errors.temporal, classes=['control-medium'], attrs={'title': 'Temporal coverage of the resource'}) }}
+		{{ form.input('temporal', label=_('Temporal Extent'), id='field-temporal', placeholder=_('e.g., a period of time or a point of time'), value=data.custom_meta.temporal, error=errors.temporal, classes=['control-medium'], attrs={'title': 'Temporal coverage of the resource'}) }}
 		</p>
 		<p>
 			<div class="control-group">
 				<label class="control-label" for="field-update_frequency"> {{ _("Update Frequency") }}</label>
 				<div class="controls">
-					<select id="field-update_frequency" name="update_frequency" data-module="autocomplete" title="Frequency with which dataset is published.">
+					<select id="field-update_frequency" name="update_frequency" data-module="autocomplete" title="If data collection ongoing, how often are the data updated? (e.g., in real time, monthly, annually)">
 						<option value="" > {{ _('Select a value') }}</option>
                         {% for level in h.update_frequency() %}
 						    <option value="{{ level }}" {% if level == data.custom_meta.update_frequency %}selected{% endif %} > {{ level }} </option>
