--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
@@ -42,9 +42,9 @@
       {% endif %}
       <div class="input-prepend" id="variable_{{ loop.index0 }}">
           <label for="{{ 'field-variables-%d-name' % loop.index0 }}" class={{ name_class }}>*Name</label>
-          <input id="{{ 'field-variables-%d-name' % loop.index0 }}" type="text" name="{{ variable_name_field}}" value="{{ variable.name | empty_and_escape }}" placeholder="Temp" />
+          <input id="{{ 'field-variables-%d-name' % loop.index0 }}" type="text" name="{{ variable_name_field}}" value="{{ variable.name | empty_and_escape }}" placeholder="e.g., temperature" title="A variable that is measured, recorded, reported, or observed within the dataset." />
           <label for="{{ 'field-variables-%d-unit' % loop.index0 }}" class="add-on">*Unit</label>
-          <input id="{{ 'field-variables-%d-unit' % loop.index0 }}" type="text" name="{{ variable_unit_field }}" value="{{ variable.unit | empty_and_escape }}" placeholder="deg C" />
+          <input id="{{ 'field-variables-%d-unit' % loop.index0 }}" type="text" name="{{ variable_unit_field }}" value="{{ variable.unit | empty_and_escape }}" placeholder="e.g., Celsius" title="The units of measure associated with a variable."/>
           <button id="btn_{{ loop.index0 }}_delete_variable" class="btn btn-danger" type="button"><i class="icon-remove-circle"></i>Delete</button>
           <input id="field-variables-{{ loop.index0 }}-delete"
                             type="hidden"
