Fix for Issue#19

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_form.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_form.html
@@ -4,7 +4,7 @@
     {{ super() }}
     <span class="info-block info-block-small" style="margin-left: 100px" >
           <i class="icon-info-sign" ></i>
-          {{ _('Metatdata may be submitted without any resources' ) }}
+          {{ _('Metatdata may be submitted without any resources. File upload size is limited to 2 GB.' ) }}
         </span>
   {% endblock %}
 
