Fix for Issue#24

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_form.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_form.html
@@ -4,8 +4,8 @@
         <p class="action-info small">
           {%- trans -%}
           Important: By submitting content, you
-          agree to release your contributions under the Creative Commons
-          License.
+          agree to release your contributions under the <a href="http://creativecommons.org/licenses/by/3.0/us/" target="_blank" style="text-decoration: underline !important"> Creative Commons
+          License.</a>
           {%- endtrans -%}
         </p>
 {% endblock %}
