--- a/src/ckanext-Metadata/ckanext/Metadata/templates/snippets/search_result_text.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/snippets/search_result_text.html
@@ -12,9 +12,9 @@ Example:
 
 #}
 {% if type == 'dataset' %}
-  {% set text_query = ungettext('{number} dataset found for "{query}"', '{number} datasets found for "{query}"', count) %}
+  {% set text_query = ungettext('{number} dataset found for "{query}"', '{number} datasets found for "{query}". Howerver, only the datasets that you have access to are listed.', count) %}
   {% set text_query_none = _('Sorry no datasets found for "{query}"') %}
-  {% set text_no_query = ungettext('{number} dataset found', '{number} datasets found', count) %}
+  {% set text_no_query = ungettext('{number} dataset found', '{number} datasets found. Howerver, only the datasets that you have access to are listed.', count) %}
   {% set text_no_query_none = _('Sorry no datasets found') %}
 
 {% elif type == 'group' %}
