Fix for Issue#47

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
@@ -23,7 +23,7 @@
 		</p>
 		<p>
 			<div class="control-group">
-				<label class="control-study" for="field-study_area"> {{ _("iUtah Study Area")}}</label>
+				<label class="control-label" for="field-study_area"> {{ _("iUtah Study Area")}}</label>
 				<div class="controls">
 					<select id="field-study_area" name="study_area" data-module="autocomplete" title="Select an iUTAH watershed or geographic area(s) to which the dataset corresponds. (e.g., Red Butte Creek, Logan River)">
                         <option value="" > {{ _('Select a value') }}</option>
