Fix for Issue#61

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
@@ -36,7 +36,7 @@
             {% set creator_address_field =  "creators__%s__address" % loop.index0 %}
             {% set creator_organization_field =  "creators__%s__organization" % loop.index0 %}
             {%  set index = loop.index0 %}
-            <div id="delete_{{ loop.index0 }}_creator" style="white-space: nowrap">
+            <div id="delete_{{ loop.index0 }}_creator" style="white-space: nowrap; margin-top: 10px">
                 <label style="display: inline">Creator</label>
                 <a id="btn_{{ loop.index0 }}_delete_creator" class="btn btn-danger" style="display: inline">
                     <i class="icon-remove-circle"></i>
