Fix for Issue#55

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_item.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_item.html
@@ -20,7 +20,7 @@
     {% endif %}
   </p>
   {% block resource_item_explore %}
-  <div class="dropdown btn-group">
+  <div class="dropdown btn-group" style="margin-right: 30px">
     <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
       <i class="icon-share-alt"></i>
       {{ _('Explore') }}
