Another fix for Issue#61 - delete button for creator and contributor now appears to the right side of the page.

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/contributor_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/contributor_fields.html
@@ -48,7 +48,7 @@
             {%  set index = loop.index0 %}
             <div id="delete_{{ loop.index0 }}_contributor" style="white-space: nowrap">
                 <label style="display: inline">Contributor</label>
-                <a id="btn_{{ loop.index0 }}_delete_contributor" class="btn btn-danger" style="display: inline">
+                <a id="btn_{{ loop.index0 }}_delete_contributor" class="btn btn-danger" style="display: inline; float: right;">
                     <i class="icon-remove-circle"></i>
                     Delete
                 </a>
