--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
@@ -30,11 +30,19 @@
             {% set creator_phone = creator['phone'] %}
             {% set creator_address = creator['address'] %}
             {% set creator_organization = creator['organization'] %}
+            {% if creator['is_a_group'] == '0' or not creator['is_a_group']  %}
+                {% set creator_is_a_group = '0' %}
+                {% set creator_is_a_group_checked = false %}
+            {% else %}
+                {% set creator_is_a_group = '1' %}
+                {% set creator_is_a_group_checked = true %}
+            {%  endif %}
             {% set creator_name_field =  "creators__%s__name" % loop.index0 %}
             {% set creator_email_field =  "creators__%s__email" % loop.index0 %}
             {% set creator_phone_field =  "creators__%s__phone" % loop.index0 %}
             {% set creator_address_field =  "creators__%s__address" % loop.index0 %}
             {% set creator_organization_field =  "creators__%s__organization" % loop.index0 %}
+            {% set creator_is_a_group_field =  "creators__%s__is_a_group" % loop.index0 %}
             {%  set index = loop.index0 %}
             <div id="delete_{{ loop.index0 }}_creator" style="white-space: nowrap">
                 <label style="display: inline">Creator</label>
@@ -49,6 +57,8 @@
             {{ form.input(creator_phone_field, label=_('Phone'), id='field-creators-%d-phone' % index, placeholder=_('e.g., 435-345-7890'), value=creator_phone, error=phone_error, classes=['control-medium'], attrs={'title': "Creator's main phone number"}) }}
             {{ form.input(creator_address_field, label=_('Address'), id='field-creators-%d-address' % index, placeholder=_('e.g., 100 Old Main Hill, Logan, UT 84322-8200'), value=creator_address, error=address_error, classes=['control-medium'], attrs={'title': "Creator's physical address."}) }}
             {{ form.input(creator_organization_field, label=_('Organization'), id='field-creators-%d-organization' % index, placeholder=_('e.g., Utah Water Research Laboratory'), value=creator_organization, error=org_error, classes=['control-medium'], attrs={'title': "Creator's home organization."}) }}
+
+            {{ form.checkbox(creator_is_a_group_field, label=_('Select if this is the name of a group of people rather than the name of an individual'), id='field-creators-%d-is_a_group' % index, placeholder='', value=creator_is_a_group, checked=creator_is_a_group_checked, error='', classes=['control-medium'], attrs={'title': "Select if the ceator is a group and not a person."}) }}
 
             <input id="field-creators-{{ loop.index0 }}-delete"
 				   			type="hidden"
