--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/info.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/info.html
@@ -11,6 +11,7 @@ Example:
 
 #}
 {% if pkg and h.check_access('package_update', {'id':pkg.id }) %}
+  {% set is_pkg_using_older_schema = h.check_if_dataset_using_older_schema(pkg.extras) %}
   <section class="module module-narrow">
     <h2 class="module-heading"><i class="icon-sitemap"></i> {{ _("Edit Dataset") }}</h2>
     <ul class="unstyled nav nav-simple">
@@ -24,11 +25,21 @@ Example:
       {% block package_resource_list %}
       {% for resource in resources %}
         <li class="nav-item{{ ' active' if active == resource.id }}">
-        {% link_for h.resource_display_name(resource)|truncate(20, True), controller='package', action='resource_edit', id=pkg.name, resource_id=resource.id, inner_span=true %}
+        {% if not is_pkg_using_older_schema %}
+            {% link_for h.resource_display_name(resource)|truncate(20, True), controller='package', action='resource_edit', id=pkg.name, resource_id=resource.id, inner_span=true %}
+        {% else %}
+        {{ h.resource_display_name(resource)|truncate(20, True) }}
+        {% endif %}
         </li>
       {% endfor %}
       {% endblock %}
-      <li class="nav-btn"><a href="{{ h.url_for(controller='package', action='new_resource', id=pkg.name)  }}" class="btn{% if action == 'resource_new' %} disabled{% endif %}"><i class="icon-plus"></i> {{ _('Add New Resource') }}</a></li>
+      <li class="nav-btn"><a href="{{ h.url_for(controller='package', action='new_resource', id=pkg.name)  }}" class="btn{% if action == 'resource_new' or is_pkg_using_older_schema %} disabled{% endif %}"><i class="icon-plus"></i> {{ _('Add New Resource') }}</a></li>
     </ul>
+    {% if is_pkg_using_older_schema %}
+        <p>
+        <i class="icon-info-sign"></i>
+        This dataset needs to be first updated to the newer schema before resources can be added/edited. Use the Update Dataset button on this page to update.
+        </p>
+    {% endif %}
   </section>
 {% endif %}
