--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_item.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_item.html
@@ -5,9 +5,14 @@
 {% endblock -%}
 
 {% set url = h.url_for(controller='package', action='resource_read', id=pkg.name, resource_id=res.id) %}
+{% set is_pkg_using_older_schema = h.check_if_dataset_using_older_schema(pkg.extras) %}
 <li class="resource-item">
   {% block resource_item_title %}
-  <a class="heading" href="{{ url }}" title="{{ res.name or res.description }}">
+      {% if not is_pkg_using_older_schema %}
+        <a class="heading" href="{{ url }}" title="{{ res.name or res.description }}">
+      {% else %}
+        <a class="heading" title="{{ res.name or res.description }}">
+      {% endif %}
     {{ h.resource_display_name(res) | truncate(50) }}<span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ res.format }}</span>
     {{ h.popular('views', res.tracking_summary.total, min=10) }}
   </a>
@@ -29,6 +34,7 @@
     <ul class="dropdown-menu">
       {% block resource_item_explore_links %}
       <li>
+        {% if not is_pkg_using_older_schema %}
         <a href="{{ url }}">
           {% if res.can_be_previewed %}
             <i class="icon-bar-chart"></i>
@@ -38,6 +44,7 @@
             {{ _('More information') }}
           {% endif %}
         </a>
+        {% endif %}
       </li>
       <li>
         <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
