--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/info.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/info.html
@@ -40,9 +40,10 @@ Example:
       {% endif %}
     </ul>
     {% if is_pkg_using_older_schema %}
-        <p>
+        <p style="margin-right: 10px; margin-left: 10px">
         <i class="icon-info-sign"></i>
-        This dataset needs to be first updated to the newer schema before resources can be added/edited. Use the Update Dataset button on this page to update.
+        This dataset was created with an older metadata schema. It needs to be updated before any of its resources can be accessed.
+        This dataset needs its metadata updated before resources can be added or edited. Use the fields and the Update Dataset button on this page to update.
         </p>
     {% endif %}
   </section>
