Another fix for issue#67 - the info text to update the dataset to newer schema was updated again.

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
@@ -11,7 +11,7 @@
         <p>
         <small>
             <i class="icon-info-sign"></i>
-                {{ _('This dataset seems to be using an older metadata schema. It needs to be updated before any of it resources can be accessed.') }}
+                {{ _('This dataset was created with an older metadata schema. It needs to be updated before any of its resources can be accessed.') }}
         </small>
         </p>
     {%  endif %}
