Updated template plugin to work with the new MDF webpage.

--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/mdf_footer.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/mdf_footer.html
@@ -1,13 +1,45 @@
-<footer>
-    <div id="footer-left-image">
-        <a href="http://utepscor.org/" target="_blank"><img src="http://iutahepscor.org/images/logos_hires/epscor_logo_rgb_sm.jpg" alt="Utah EPSCoR" width="156" height="73"></a>
+<footer style="height: 220px" class="navbar-inner">
+    <div class="center_header">
+        <div id="footerLinks">
+            <div class="linksbox">
+                <ul>
+                    <li><a href="http://www.iutahepscor.org">iUTAH Homepage</a></li>
+                    <li><a href="http://www.utepscor.org">Utah EPSCoR</a></li>
+                    <li><a href="http://ci-water.org/">CI-WATER EPSCoR</a></li>
+                </ul>
+            </div>
+            <div class="linksbox">
+                <ul>
+                    <li><a href="http://data.iutahepscor.org/mdf/Data/Gamut Network Overview">GAMUT Data Overview</a></li>
+                    <li><a href="http://data.iutahepscor.org/odmmap" target="_blank">GAMUT Map Viewer</a></li>
+                    <li><a href="http://data.iutahepscor.org/mdf/Development/Software Development">Software Development</a></li>
+                </ul>
+            </div>
+            <div class="linksbox lastbox">
+                <ul>
+                    <li><a href="http://data.iutahepscor.org/mdf/About/Documentation">Documentation</a></li>
+                    <li><a href="http://data.iutahepscor.org/mdf/About/Training Materials">Training Materials</a></li>
+                    <li><a href="http://data.iutahepscor.org/mdf/About/Personnel">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="footer-left-image">
+            <a href="http://utepscor.org/" target="_blank"><img
+                    src="http://data.iutahepscor.org/mdf/static/mdfserver/img/epscor_logo.jpg" alt="Utah EPSCoR"
+                    width="156" height="73">
+            </a>
+        </div>
+        <div id="footer-text">
+            <p>This project is funded through <a
+                    href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1208732"
+                    target="_blank">EPS - 1208732</a>. Any opinions, findings, and
+                conclusions or recommendations expressed in this material are those of the author(s) and do not
+                necessarily reflect the views of the National Science Foundation.</p>
+        </div>
+        <aside id="footer-right-image">
+            <a href="http://www.nsf.gov/div/index.jsp?div=EPSC" target="_blank">
+                <img src="http://data.iutahepscor.org/mdf/static/mdfserver/img/nsf1.png" width="80" height="80">
+            </a>
+        </aside>
     </div>
-	<div id="footer-text">
-        <p>This project is funded through <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1208732" target="_blank">EPS - 1208732</a>.  Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.</p>
-	</div>
-    <aside id="footer-right-image">
-        <a href="http://www.nsf.gov/div/index.jsp?div=EPSC" target="_blank">
-            <img src="http://iutahepscor.org/images/nsf1.png" alt="National Science Foundation" width="80" height="80">
-        </a>
-    </aside>
 </footer>
