Fixed css issues.

--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/base.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/base.html
@@ -8,5 +8,6 @@
 
 {% block scripts %}
 	{{ super() }}
+	{% resource 'resources/mdftemplate_hover_dropdown.js' %}
 	{% resource 'resources/mdftemplate_dataset_fields.js' %}
 {% endblock %}
