--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
@@ -63,18 +63,17 @@
 
 {#optional Metadata#}
 <div class="panel panel-default">
-	<div class = "panel-heading">
+	<div class = "panel-heading" style="margin-top: 20px">
 		<span class="panel-title">
 			<a data-toggle="collapse" class="accordion-toggle collapsed" data-parent="#accordion" href="#vmDiv"> Optional Metadata  </a> 
 		</span>
 	</div>
 	<div id="vmDiv" class="panel-collapse collapse out">
-		<p>
+		<div style="margin-top: 20px">
 			{{ form.markdown('data_collection_method', label=_('Data Collection Method'), id='field-data_collection_method', placeholder=_('YSI EXO sonde used to measuer temperature. Values logged using a Campbell Scientivic datalogger and streamd to iUTAH servers. Calibration conducted weekly'), value=data.custom_meta.data_collection_method, error=errors.data_collection_method,  attrs={'title': 'The methods used to generate, create, collect, or produce the data.'} )}}
-		</p>
-		<p>
-			{{ form.markdown('data_processing_method', label=_('Data Processing Method'), id='field-data_processing_method', placeholder=_('Data quality control and post processing conducted with ODM tools Python by watershed technicians'), value=data.custom_meta.data_processing_method, error=errors.data_processing_method,  attrs={'title': 'The methods and programs used and specific steps undertaken to process the data.'} )}}
-		</p>
+		</div>
+
+		{{ form.markdown('data_processing_method', label=_('Data Processing Method'), id='field-data_processing_method', placeholder=_('Data quality control and post processing conducted with ODM tools Python by watershed technicians'), value=data.custom_meta.data_processing_method, error=errors.data_processing_method,  attrs={'title': 'The methods and programs used and specific steps undertaken to process the data.'} )}}
 	</div>
 </div>
 {% endblock package_variable_metadata %}
