--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/home/index.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/home/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div role="main" class="hero">
-    <div id="content" class="container">
+    <div id="content" class="container" >
       {{ self.flash() }}
 	  {{ self.toolbar() }}
       {{ self.primary_content() }}
@@ -15,6 +15,57 @@
   </div>
 {% endblock %}
 
+{% block home_primary %}
+    <header>
+        {% block home_primary_content %}
+          <h1 class="page-heading">{% block home_primary_heading %}{{ _("Welcome to the iUTAH Data Publication System") }}{% endblock %}</h1>
+          <p>
+          {% block home_primary_text %}
+            {% trans %}Use this site to publish your iUTAH-related datasets.
+            {% endtrans %}
+          {% endblock %}
+          </p>
+        {% endblock %}
+    </header>
+{% endblock %}
+{% block home_image %}
+    <section class="featured media-overlay">
+{#          <h2 class="media-heading">{% block home_image_caption %}{{ _("This is a featured section") }}{% endblock %}</h2>#}
+      {% block home_image_content %}
+        <a class="media-image" href="#">
+          <img src="images/ReservoirTower_130626.jpg" alt="Placeholder" width="420" height="220" />
+        </a>
+      {% endblock %}
+    </section>
+{% endblock %}
+{% block home_secondary_content %}
+      <div class="module module-shallow module-narrow module-dark info box">
+        {% block home_search %}
+          <form class="module-content search-form" method="get" action="{% url_for controller='package', action='search' %}" style="margin-bottom: -15px" >
+            <h3 class="heading" style="color: white">{{ _("Search Your Data") }} </h3>
+            <div class="search-input control-group search-giant" >
+              <input type="text" class="search" name="q" value="{{ c.q }}" autocomplete="off" placeholder="{{ _('eg. time series') }}" style="margin-bottom: 10px"/>
+              <button type="submit">
+                <i class="icon-search"></i>
+                <span>{{ _('Search') }}</span>
+              </button>
+            </div>
+          </form>
+        {% endblock %}
+        {% block home_tags %}
+          <div class="tags">
+            <h3 style="color: white">{{ _('Popular Tags') }}</h3>
+            {% set tags = h.get_facet_items_dict('tags', limit=3) %}
+            {% for tag in tags %}
+              <a class="tag" href="{% url_for controller='package', action='search', tags=tag.name %}">{{ h.truncate(tag.display_name, 22) }}</a>
+            {% endfor %}
+          </div>
+        {% endblock %}
+      </div>
+{% endblock %}
+
+{% block secondary_content %}
+{% endblock %}
 {% block toolbar %}
 	<div class="toolbar">
 		{% block breadcrumb %}
